--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 .title{
   text-align: center;
+  font-family: 'Permanent Marker', cursive;
 }
 
 .loader {
@@ -9,4 +12,5 @@
   justify-content: center;
   align-items: center;
   font-weight: 300;
+  font-family: 'Permanent Marker', cursive;
 }
