--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Zilla Slab', serif;
-  background-color: #eff3f7;
   height: 100%;
+  background-color: black;
 }
