--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -11,6 +11,8 @@
 .loader {
   width: 100%;
   height: 100vh;
+  color: #fff;
+  font-size: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
